# ha-tibber-data

./: .gitignore  CHANGELOG.md  CLAUDE.md  FINAL_SUCCESS.md  README.md  TESTING_COMPLETE.md  TEST_SUITE_STATUS.md  hacs.json  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: release.yml  test.yml  validate.yml
custom_components/: __init__.py
custom_components/tibber_data/: __init__.py  application_credentials.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/tibber_data/api/: __init__.py  client.py  models.py
specs/001-build-a-hacs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-hacs/contracts/: api-specification.yaml
tests/: conftest.py  test_api_retry.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity_caching.py  test_init.py  test_sensor.py
tests/test_api/: test_device_details.py  test_device_history.py  test_devices.py  test_home_details.py  test_homes.py  test_models.py  test_oauth2_auth.py  test_oauth2_refresh.py  test_oauth2_token.py
